{{$NEXT}}
 - no need for Task::Weaken

0.01_5    2014-06-12 16:25:33+01:00 Europe/London
 - install the share dir with the XML schema files

0.01_4    2014-06-10 10:43:55+01:00 Europe/London
 - do not swallow non-http exceptions

0.01_3    2014-06-09 10:28:33+01:00 Europe/London
 - failed Futures now have a 'dhl' string as second element, as
   recommended by PEVANS
 - fix Perl version specification
 - add explicit dependency on DateTime::Format::ISO8601

0.01_2    2014-06-05 15:14:10+01:00 Europe/London
 - correctly handle connection failures

0.01_1    2014-06-05 12:21:10+01:00 Europe/London
 - first release
 - requires Perl 5.10
 - will work with IO::Async and Net::Async::HTTP, or with plain
   LWP::UserAgent