@@ -30,7 +30,7 @@ skip = ^LWP
 
 [Prereqs / RuntimeRequires]
 DateTime::Format::ISO8601 = 0
-Net::Async::Webservice::Common = 0
+;Net::Async::Webservice::Common = 0
 
 [Prereqs / RuntimeRecommends]
 IO::Async::Loop = 0
@@ -50,7 +50,7 @@ LWP::UserAgent = 0
 
 [NoTabsTests]
 
-[PodCoverageTests]
+;[PodCoverageTests]
 
 [PodSyntaxTests]
 
